--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,4 +53,650 @@ ul {
   padding: 0;
   margin: 0;
 }
+
+.header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+#popup-wrap {
+  background-color: #fff;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 10;
+}
+
+.popup {
+  width: 1170px;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  margin-left: -550px;
+  margin-top: -440px;
+}
+
+.popup.double {
+  width: 560px;
+  margin-left: -280px;
+}
+
+.logo {
+  max-height: 50px;
+}
+
+.popup-main {
+  background-color: #f0eee1;
+  border-radius: 10px;
+  padding: 20px 30px;
+  margin: 30px 0 0;
+}
+
+form fieldset {
+  display: none;
+  border: none;
+  padding: 0;
+  margin: 0;
+}
+
+form fieldset.active {
+  display: inline-block;
+  width: 100%;
+}
+
+.title-h1 {
+  border-bottom: 3px solid #ccd392;
+  padding: 0 0 20px;
+  margin: 0 0 25px;
+}
+
+.title-h2 {
+  font-size: 24px;
+  margin: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  font-weight: 400;
+  padding: 0 0 30px;
+}
+
+.title-h2 img {
+  margin: 0 20px 0 0;
+}
+
+.title-h3 {
+  font-size: 21px;
+  margin: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  font-weight: 400;
+}
+
+.title-h4 {
+  font-size: 18px;
+  font-weight: 800;
+  padding: 0 0 10px;
+}
+
+.title-h5 {
+  font-size: 14px;
+  font-weight: 400;
+  padding: 10px 0;
+  line-height: 18px;
+}
+
+.title-h5 span {
+  font-weight: 400;
+}
+
+.title-h5.smaller {
+  font-size: 13px;
+}
+
+.first-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 70%;
+  padding: 15px 0;
+}
+
+.first-list li {
+  list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  padding: 0 0 15px;
+  font-size: 18px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+}
+
+.first-list li i {
+  background-color: #1b618c;
+  border-radius: 50px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 25px;
+  height: 25px;
+  color: #fff;
+  margin: 0 15px 0 0;
+  font-style: normal;
+}
+
+.first-list li span {
+  width: 90%;
+}
+
+.steps-ul {
+  height: 420px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  padding: 15px 0;
+}
+
+.steps-ul li {
+  list-style: none;
+}
+
+.steps-ul li h6 {
+  padding: 0 0 5px;
+  position: relative;
+  display: inline-block;
+}
+
+.steps-ul li h6.selfie {
+  margin: 0 0 0 -15px;
+}
+
+.steps-ul li h6 img {
+  max-width: 200px;
+  max-height: 300px;
+}
+
+.steps-ul li ul {
+  padding: 10px 0;
+}
+
+.steps-ul li ul li {
+  font-size: 14px;
+  line-height: 18px;
+}
+
+.steps-ul li ul.padding-top20,
+.padding-top20 {
+  padding-top: 20px;
+}
+
+.padding-bottom20 {
+  padding-bottom: 20px;
+}
+
+.padding-top0 {
+  padding-top: 0;
+}
+
+.mobile-ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  padding: 0 0 20px;
+}
+
+.mobile-ul li {
+  width: 50%;
+}
+
+.mobile-ul li img {
+  max-height: 240px;
+}
+
+.mobile-ul li .title-h5 {
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.width-60 {
+  width: 60%;
+  margin: auto;
+}
+
+.tick,
+.tick2,
+.tick3 {
+  font-size: 18px;
+  border-radius: 50px;
+  background-color: #1b618c;
+  color: #fff;
+  width: 28px;
+  height: 28px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: absolute;
+  top: -10px;
+  right: -10px;
+}
+
+.next-btn,
+.close-btn {
+  border: none;
+  background-color: #1b618c;
+  padding: 15px;
+  width: 180px;
+  display: inline-block;
+  margin: auto;
+  color: #fff;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+.check-ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 40px 0 200px;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.check-ul li {
+  list-style: none;
+  width: 47%;
+}
+
+.check-ul label {
+  cursor: pointer;
+  font-size: 14px;
+  color: #000;
+  margin: 0;
+  padding: 40px 0;
+  font-weight: normal;
+  background-color: #fff;
+  border: 2px solid #999;
+  text-align: center;
+  width: 100%;
+  border-radius: 10px;
+  position: relative;
+  z-index: 1;
+  display: block;
+}
+
+.check-ul li [type="radio"] {
+  display: none;
+}
+
+.check-ul li label:hover,
+.check-ul li input[type="radio"]:checked + label {
+  background-color: #1b618c;
+  border-color: #1b618c;
+  color: #fff;
+}
+
+.title-h6 {
+  font-size: 13px;
+  font-weight: 400;
+  padding: 0 0 10px;
+  color: red;
+}
+
+.camera-ul li {
+  list-style: none;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border: 1px dashed #999;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  align-items: center;
+  border-radius: 10px;
+  padding: 60px 10px;
+}
+
+.camera-ul2 {
+  height: 340px;
+}
+
+.otp-ul {
+  height: 275px;
+  width: 100%;
+}
+
+.otp-ul li {
+  list-style: none;
+  width: 100%;
+  padding: 30px 0 0;
+}
+
+.otp-ul li.mobile {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.otp-ul li.mobile select {
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  -o-appearance: none;
+  background: url(../images/dropdown.png) 88% center no-repeat;
+  display: block;
+  text-indent: 0.01px;
+  border-left: 1px solid #999;
+  border-top: 1px solid #999;
+  border-bottom: 1px solid #999;
+  width: 30%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  padding: 12px 5px;
+  border-radius: 10px 0 0 10px;
+}
+
+.input-box {
+  width: 100%;
+  border-radius: 10px;
+  border: 1px solid #999;
+  padding: 12px 15px;
+  text-align: center;
+  position: relative;
+}
+
+.input-box:focus, .input-box:active {
+  outline: none;
+}
+
+.otp-ul li.mobile .input-box {
+  text-align: left;
+  width: 70%;
+  border-radius: 0 10px 10px 0;
+}
+
+.completed {
+  background-color: #e5f4f6;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 220px;
+  height: 220px;
+  margin: 60px 0;
+  border-radius: 50%;
+}
+
+.completed .first {
+  width: 160px;
+  height: 160px;
+  border-radius: 50%;
+  background-color: #aedde2;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.completed .second {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  background-color: #0197a5;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.completed .third {
+  width: 45px;
+  height: 45px;
+  border-radius: 50%;
+  border: 1px solid #fff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.tick-last {
+  color: #fff;
+  font-size: 18px;
+}
+
+.konto-ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  height: 210px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.konto-ul li {
+  list-style: none;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  width: 100%;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-radius: 10px;
+}
+
+.konto-ul h6 {
+  position: relative;
+  display: inline-block;
+}
+
+.fts-logo {
+  text-align: right;
+  padding: 20px 0 20px;
+}
+
+.fts-logo img {
+  width: 100%;
+  max-width: 100px;
+}
+
+.reference-ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  text-align: left;
+  height: 275px;
+  padding: 15px 0;
+}
+
+.reference-ul li {
+  list-style: none;
+  padding: 0 0 20px;
+  font-size: 14px;
+}
+
+.reference-ul li label {
+  text-decoration: underline;
+  padding: 0 0 8px;
+  display: block;
+}
+
+.reference-ul li .terms {
+  display: inline-block;
+  position: relative;
+}
+
+.reference-ul li .terms input {
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+
+.reference-ul li .terms label {
+  cursor: pointer;
+  text-decoration: none;
+  padding: 0 0 0 25px;
+}
+
+.reference-ul li select {
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  -o-appearance: none;
+  background: url(../images/dropdown.png) 92% center no-repeat;
+  display: block;
+  text-indent: 0.01px;
+  border: 1px solid #999;
+  width: 100%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  padding: 12px 15px;
+}
+
+/*** Responsive for tablets ***/
+@media all and (device-width: 1024px) and (device-height: 768px) and (orientation: landscape) {
+  .popup {
+    margin-top: 0;
+    top: 50px;
+  }
+}
+
+@media (min-width: 1025px) and (max-width: 1300px) {
+  .popup {
+    margin-top: 0;
+    top: 50px;
+  }
+}
+
+/*** Responsive for mobile ***/
+@media only screen and (max-width: 767px) {
+  body {
+    background-position: 0 0;
+  }
+  .popup {
+    margin-top: 0;
+    top: 20px;
+  }
+  .logo {
+    max-width: 150px;
+  }
+  .popup-main {
+    margin: 15px 0 0;
+  }
+  .popup.double {
+    width: 100%;
+    margin-left: auto;
+    padding: 0 15px;
+    left: auto;
+  }
+  .steps-ul {
+    height: auto;
+  }
+  .mobile-ul {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
 /*# sourceMappingURL=style.css.map */
