--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -76,19 +76,39 @@ ul {
   top: 50%;
   margin-left: -550px;
   margin-top: -440px;
-  &.double {
-    width: 560px;
-    margin-left: -280px;
+}
+.width-short {
+  width: 560px;
+  margin: auto;
+}
+.mr-left-50 {
+  img {
+    margin-left: 50px;
   }
 }
 .logo {
   max-height: 50px;
 }
 .popup-main {
+}
+.color-bg {
   background-color: #f0eee1;
-  border-radius: 10px;
   padding: 20px 30px;
-  margin: 30px 0 0;
+  &.flex-space {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+}
+.flex-box-50 {
+  display: flex;
+  justify-content: space-between;
+  div {
+    width: 47%;
+    .btn-box {
+      width: 100%;
+    }
+  }
 }
 form {
   fieldset {
@@ -103,10 +123,15 @@ form {
   }
 }
 
+.text-center {
+  text-align: center;
+}
+
 .title-h1 {
   border-bottom: 3px solid #ccd392;
   padding: 0 0 20px;
   margin: 0 0 25px;
+  text-align: center;
 }
 .title-h2 {
   font-size: 24px;
@@ -124,10 +149,9 @@ form {
 .title-h3 {
   font-size: 21px;
   margin: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   font-weight: 400;
+  font-weight: bold;
+  padding: 0 0 15px;
 }
 .title-h4 {
   font-size: 18px;
@@ -135,7 +159,7 @@ form {
   padding: 0 0 10px;
 }
 .title-h5 {
-  font-size: 14px;
+  font-size: 18px;
   font-weight: 400;
   padding: 10px 0;
   line-height: 18px;
@@ -143,20 +167,19 @@ form {
     font-weight: 400;
   }
   &.smaller {
-    font-size: 13px;
+    font-size: 15px;
   }
 }
 
 .first-list {
   display: flex;
   flex-direction: column;
-  width: 70%;
   padding: 15px 0;
   li {
     list-style: none;
     display: flex;
     flex-direction: row;
-    padding: 0 0 15px;
+    padding: 0 0 20px;
     font-size: 18px;
     align-items: center;
     width: 100%;
@@ -178,31 +201,36 @@ form {
   }
 }
 
+.flex-box {
+  display: flex;
+  justify-content: space-between;
+  div:first-child {
+    width: 75%;
+  }
+  div:last-child {
+    width: 25%;
+  }
+}
+
 .steps-ul {
-  height: 420px;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
-  padding: 15px 0;
+  justify-content: center;
   li {
     list-style: none;
+    text-align: center;
+    padding: 0 0 15px;
     h6 {
       padding: 0 0 5px;
       position: relative;
       display: inline-block;
-      &.selfie {
-        margin: 0 0 0 -15px;
-      }
-      img {
-        max-width: 200px;
-        max-height: 300px;
-      }
     }
     ul {
       padding: 10px 0;
       li {
-        font-size: 14px;
+        font-size: 16px;
         line-height: 18px;
+        padding: 0 0 5px;
       }
     }
   }
@@ -253,6 +281,10 @@ form {
   position: absolute;
   top: -10px;
   right: -10px;
+}
+.btn-box {
+  display: flex;
+  justify-content: center;
 }
 .next-btn,
 .close-btn {
@@ -307,7 +339,8 @@ form {
   padding: 0 0 10px;
   color: red;
 }
-.camera-ul {
+.steps-ul li ul.camera-ul {
+  padding: 30px 0;
   li {
     list-style: none;
     flex: 1;
