--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,6 +75,7 @@ ul {
 .width-short {
   width: 560px;
   margin: auto;
+  max-width: 100%;
 }
 
 .mr-left-50 img {
@@ -698,7 +699,7 @@ form fieldset.active {
     background-position: 0 0;
   }
   .logo {
-    max-width: 150px;
+    max-width: 120px;
   }
   .main-content {
     margin: 15px 0 0;
@@ -714,6 +715,44 @@ form fieldset.active {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+  }
+  .title-h1 {
+    font-size: 24px;
+    padding: 15px 0;
+  }
+  .title-h2 {
+    font-size: 21px;
+    padding: 0 0 15px;
+  }
+  .title-h3 {
+    font-size: 18px;
+  }
+  .flex-box,
+  .flex-box-50 {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .flex-box div:first-child,
+  .flex-box div:last-child,
+  .flex-box-50 div:first-child,
+  .flex-box-50 div:last-child {
+    width: 100%;
+  }
+  .color-bg {
+    padding: 20px 15px;
+    margin: 0 0 20px;
+  }
+  .width-short {
+    width: auto;
+  }
+  .mr-left-50 img {
+    margin: 0;
+  }
+  .mobile-ul li,
+  .title-h2.width-60 {
+    width: 100%;
   }
 }
 /*# sourceMappingURL=style.css.map */
