--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -570,4 +570,10 @@ form {
   .title-h2.width-60 {
     width: 100%;
   }
+  br {
+    display: none;
+  }
+  .title-h2.smaller {
+    font-size: 18px;
+  }
 }
