--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -213,6 +213,21 @@ form {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  &.first-step li {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 10px 0;
+    h6 {
+      width: 40%;
+    }
+    h5 {
+      width: 60%;
+      justify-content: flex-start;
+      text-align: left;
+      padding: 0;
+    }
+  }
   li {
     list-style: none;
     text-align: center;
