--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,6 +47,7 @@ body {
   font-family: "KFWCentroSans";
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  color: #5a6166;
 }
 
 ul {
@@ -149,6 +150,7 @@ form fieldset.active {
   padding: 0 0 20px;
   margin: 0 0 25px;
   text-align: center;
+  font-weight: 400;
 }
 
 .title-h2 {
@@ -172,7 +174,6 @@ form fieldset.active {
   font-size: 21px;
   margin: 0;
   font-weight: 400;
-  font-weight: bold;
   padding: 0 0 15px;
 }
 
@@ -209,7 +210,7 @@ form fieldset.active {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  padding: 15px 0;
+  padding: 15px 0 5px;
 }
 
 .first-list li {
@@ -230,7 +231,7 @@ form fieldset.active {
 }
 
 .first-list li i {
-  background-color: #1b618c;
+  background-color: #5a6166;
   border-radius: 50px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -269,6 +270,10 @@ form fieldset.active {
   width: 25%;
 }
 
+.text-left {
+  text-align: left;
+}
+
 .steps-ul {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -280,6 +285,11 @@ form fieldset.active {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+}
+
+.steps-ul.width300 {
+  width: 300px;
+  margin: auto;
 }
 
 .steps-ul.first-step {
@@ -317,6 +327,11 @@ form fieldset.active {
   list-style: none;
   text-align: center;
   padding: 0 0 15px;
+}
+
+.steps-ul li.text-left,
+.steps-ul li.text-left ul li {
+  text-align: left;
 }
 
 .steps-ul li h6 {
@@ -371,8 +386,8 @@ form fieldset.active {
 }
 
 .mobile-ul li .title-h5 {
-  padding-left: 10px;
-  padding-right: 10px;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
 .width-60 {
@@ -490,7 +505,6 @@ form fieldset.active {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  border: 1px dashed #999;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -733,6 +747,25 @@ form fieldset.active {
   overflow: hidden;
   text-overflow: ellipsis;
   padding: 12px 15px;
+}
+
+.powered-by {
+  font-weight: 400;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: end;
+  font-size: 16px;
+  padding: 40px 0 15px;
+}
+
+.powered-by img {
+  margin: 0 0 0 10px;
 }
 
 /*** Responsive for tablets ***/
