--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -49,6 +49,7 @@ body {
   font-family: "KFWCentroSans";
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  color: #5a6166;
 }
 ul {
   padding: 0;
@@ -127,6 +128,7 @@ form {
   padding: 0 0 20px;
   margin: 0 0 25px;
   text-align: center;
+  font-weight: 400;
 }
 .title-h2 {
   font-size: 24px;
@@ -144,7 +146,6 @@ form {
   font-size: 21px;
   margin: 0;
   font-weight: 400;
-  font-weight: bold;
   padding: 0 0 15px;
   &.smaller {
     font-size: 18px;
@@ -171,7 +172,7 @@ form {
 .first-list {
   display: flex;
   flex-direction: column;
-  padding: 15px 0;
+  padding: 15px 0 5px;
   li {
     list-style: none;
     display: flex;
@@ -181,7 +182,7 @@ form {
     align-items: center;
     width: 100%;
     i {
-      background-color: #1b618c;
+      background-color: #5a6166;
       border-radius: 50px;
       display: flex;
       align-items: center;
@@ -208,11 +209,17 @@ form {
     width: 25%;
   }
 }
-
+.text-left {
+  text-align: left;
+}
 .steps-ul {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  &.width300 {
+    width: 300px;
+    margin: auto;
+  }
   &.first-step {
     padding: 40px 0 0;
     li {
@@ -235,6 +242,10 @@ form {
     list-style: none;
     text-align: center;
     padding: 0 0 15px;
+    &.text-left,
+    &.text-left ul li {
+      text-align: left;
+    }
     h6 {
       padding: 0 0 5px;
       position: relative;
@@ -275,8 +286,8 @@ form {
       max-height: 240px;
     }
     .title-h5 {
-      padding-left: 10px;
-      padding-right: 10px;
+      padding-left: 15px;
+      padding-right: 15px;
     }
   }
 }
@@ -364,7 +375,6 @@ form {
     flex: 1;
     justify-content: center;
     align-items: center;
-    border: 1px dashed #999;
     display: flex;
     align-items: center;
     border-radius: 10px;
@@ -535,6 +545,19 @@ form {
     }
   }
 }
+
+.powered-by {
+  font-weight: 400;
+  display: flex;
+  align-items: center;
+  justify-content: end;
+  font-size: 16px;
+  padding: 40px 0 15px;
+  img {
+    margin: 0 0 0 10px;
+  }
+}
+
 /*** Responsive for tablets ***/
 /*** Responsive for mobile ***/
 @media only screen and (max-width: 767px) {
