--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -87,7 +87,7 @@ ul {
   max-height: 50px;
 }
 .color-bg {
-  background-color: #f0eee1;
+  background-color: #fdf6ef;
   padding: 20px 30px;
   &.flex-space {
     display: flex;
