--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -174,6 +174,9 @@ form {
   display: flex;
   flex-direction: column;
   padding: 50px 0;
+  &.padding-less {
+    padding-bottom: 40px;
+  }
   li {
     list-style: none;
     display: flex;
@@ -229,7 +232,7 @@ form {
     justify-content: space-evenly;
   }
   &.first-step {
-    padding: 40px 0 0;
+    padding: 78px 0 0;
     li {
       display: flex;
       flex-direction: row;
@@ -569,7 +572,25 @@ form {
   }
 }
 
-/*** Responsive for tablets ***/
+/* Responsive Media Queries */
+/* For Ipad */
+@media (min-width: 768px) and (max-width: 1024px) and (orientation: portrait) {
+  .flex-box div {
+    &:first-child {
+      width: 65%;
+    }
+    &:last-child {
+      width: 35%;
+    }
+  }
+  .first-list,
+  .first-list.padding-less {
+    padding: 20px 0;
+  }
+  .steps-ul.first-step li {
+    padding: 5px 0 30px;
+  }
+}
 /*** Responsive for mobile ***/
 @media only screen and (max-width: 767px) {
   body {
@@ -641,7 +662,8 @@ form {
   .mr-left-25 .title-h5 {
     margin: 0;
   }
-  .first-list {
+  .first-list,
+  .first-list.padding-less {
     padding: 15px 0;
   }
   .steps-ul.height380 {
